[Zurich] Fix status message overlapping content.

--- a/web/cobrands/zurich/layout.scss
+++ b/web/cobrands/zurich/layout.scss
@@ -315,6 +315,9 @@ body.mappage.admin {
       font-weight: bold;
       position: absolute;
     }
+    .index-status .message-updated {
+        margin-top: -1.5em;
+    }
 }
 
 .admin-nav-wrapper {
